# AutoVisType

./: .env.example  .gitignore  README.md  pyproject.toml
data/: vispubData30_updated_07112024.csv
data/results/provider=google_genai/model=gemini-2.0-flash/: analysis.parquet
data/results/provider=google_genai/model=gemini-2.5-flash-preview-05-20/: analysis.parquet
data/results/provider=google_genai/model=gemini-2.5-pro-preview-05-06/: analysis.parquet
data/results/provider=meta-llama/model=llama-4-maverick/: analysis.parquet
data/results/provider=meta-llama/model=llama-4-scout/: analysis.parquet
data/results/provider=mistralai/model=mistral-medium-3/: analysis.parquet
data/results/provider=mistralai/model=mistral-small-3.1-24b-instruct/: analysis.parquet
data/results/provider=mistralai/model=pixtral-large-2411/: analysis.parquet
data/results/provider=openai/model=gpt-4.1/: analysis.parquet
data/results/provider=openai/model=gpt-4.1-mini/: analysis.parquet
data/results/provider=openai/model=gpt-4.1-nano/: analysis.parquet
data/results/provider=openai/model=o4-mini/: analysis.parquet
data/results/provider=qwen/model=qwen2.5-vl-32b-instruct/: analysis.parquet
src/: evaluation.py  inference.py  sysprompt.md
src/layouts/: evaluation.grid.json
